

HEAD
====
Enhancements:
- A LD_PRELOAD-able library libHX_rtcheck.so that adds global state correctness
  checks, was added.
Changes:
- HX_strquote will return NULL for unknown types now instead of just
  returning the input pointer


v3.10.1 (2011-04-06)
====================
Fixes:
- defs: BUILD_BUG_ON_EXPR had erroneously returned 1


v3.10 (2011-04-05)
==================
Fixes:
- build: resolve autoconf-2.68 warnings
- format: do not split arguments in %(lower) and %(upper)
Changes:
- defs: add array type checking in ARRAY_SIZE
- opt: use non-zero sentinel marker
- string: make HX_getl more resilient against errors
Enhancements:
- defs: add BUILD_BUG_ON_EXPR
- format: provide a %(substr) function
- io: add HX_readlink (zero-terminating mc-output readlink)
- io: add HX_realpath (supports relative-path output)


v3.9.1 (2011-01-17)
===================
Fixes:
- libHX/io.h was not copied on `make install`, which has been fixed


v3.9 (2011-01-15)
=================
Fixes:
- Added missing __cplusplus guards to libHX/io.h
- Added missing includes to libHX/string.h
- Use __typeof__ in includes
Changes:
- For filesystem/filehandle-related functions, io.h should now be included
  in userspace programs instead of misc.h
- libHX.so is now built with a symvers map file
Enhancements:
- hxdirstamp: new development helper program for library users
  (Note to distros: should be in libHX-devel; it is only used during builds)
- io: new functions HXio_full{read,write}


v3.8 (2010-12-01)
=================
This was supposed to go into 3.7 but I forgot to merge in time..
Changes:
- hexdump: colorize characters 0x00 thru 0x1F in tty mode


v3.7 (2010-12-01)
=================
Changes:
- libxml_helper: redo xml_newnode to take a parent and value string
- list: unify naming of reverse-direction functions
- misc: HX_zveclen now returns unsigned from (previous: int)
- dir: HXdir functions now work with struct HXdir * instead of void *
Fixes: