@@ -24,6 +24,7 @@ enum {
 	HXQUOTE_HTML,
 	HXQUOTE_LDAPFLT,
 	HXQUOTE_LDAPRDN,
+	HXQUOTE_BASE64,
 	_HXQUOTE_MAX,
 };
 
