@@ -162,6 +162,7 @@ static void t_quote(void)
 	printf("%s\n", HX_strquote("<p style=\"height: 1;\">Foo &amp; \"bar\"</p>", HXQUOTE_HTML, &fm));
 	printf("(objectClass=%s)\n", HX_strquote(" #o=foo(*),bar ", HXQUOTE_LDAPFLT, &fm));
 	printf("o=%s\n", HX_strquote(" #o=foo(*),bar ", HXQUOTE_LDAPRDN, &fm));
+	printf("%s\n", HX_strquote("whatever", HXQUOTE_BASE64, &fm));
 	free(fm);
 	if (HX_strquote("", -1, NULL) != NULL)
 		printf("Something is fishy with strquote\n");
